<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/failed"
            android:textColor="@color/txt_dark"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/oh_no_something_went_wrong_please_check_your_internet_connection_then_try_again"
            android:textColor="@color/txt_dark"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/bg_btn_try_again"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/try_again"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/_12ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <TextView
                android:id="@+id/btnBackToHome"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/back_to_home"
                android:textColor="@color/txt_description"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/txt_description"
                app:layout_constraintTop_toBottomOf="@id/btnBackToHome"
                app:layout_constraintStart_toStartOf="@id/btnBackToHome"
                app:layout_constraintEnd_toEndOf="@id/btnBackToHome"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>