<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/txt_red"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/are_you_sure_you_want_to_delete_you_will_not_be_able_to_undo_this_action"
            android:textAlignment="center"
            android:textColor="@color/txt_dark"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@color/txt_description"
                android:paddingVertical="@dimen/_12sdp"
                android:background="@drawable/bg_btn_cancel_delete_remind"
                android:textAlignment="center" />

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@color/txt_white"
                android:paddingVertical="@dimen/_12sdp"
                android:background="@drawable/bg_btn_delete_remind"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>
</layout>